# cuda-sgemm-optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  device_info.py
benchmarks/: autotune.py  bench_cublas.py  bench_kernels.py
include/: kernels.h  utils.h
kernels/fp32/: matmul.cu
kernels/fp8_wmma/: fused_cbs_fp8.cu  matmul_fp8.cu
learning_examples/: massive_add.cu  matrix_add.cu  vector_add.cu
scripts/: plot_benchmark.py
src/: engine.py  kernels.h  layers.py  main.cu  utils.cu
src/kernels/: 01_naive.cu  02_coalesced.cu  03_tiling.cu  04_vectorized.cu
